--- a/Interactive Resume.html
+++ b/Interactive Resume.html
@@ -313,7 +313,7 @@
                     "Currently taking a Bachelor of Science in Computer Engineering course.",
                     "Studying at the Polytechnic University of the Philippines - Paranaque Campus",
                 ], xRange: [201, 400] },
-            { name: 'Experience', x: 2 * sectionWidth, width: sectionWidth, color: 'black', content: 'I have worked as an Intern at Highly Succeed Inc. The departmen that I have chosen are the Website Development Department (Backend) and the Graphics Design Department. In addition, I have work as a customer service representative at Majorel Company ', xRange: [401, 600] },
+            { name: 'Experience', x: 2 * sectionWidth, width: sectionWidth, color: 'black', content: 'I have worked as an Intern at Highly Succeed Inc. The department that I have chosen are the Website Development Department (Backend) and the Graphics Design Department. In addition, I have work as a customer service representative at Majorel Company ', xRange: [401, 600] },
             { name: 'Skills', x: 3 * sectionWidth, width: sectionWidth, color: 'black', content: 'My skills in terms of programming includes Python, Laravel, PHP, HTML, CSS, JavaScript, GNU Ocatve and 3D Rendering', xRange: [601, 800] },
             { name: 'Contact', x: 4 * sectionWidth, width: sectionWidth, color: 'black', content: 'You can contact me through email at mckenzhie03@gmail.com', xRange: [801, 1000] },
             { name: 'The End', x: 5 * sectionWidth, width: sectionWidth, color: 'black', content: 'Thank you for playing! Hope you enjoyed this simple resume game.', xRange: [1001, 1200] },
